template fix by sanjay rathore

--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="assets/dist/css/gijgo.css">
   <link rel="stylesheet" href="assets/dist/css/slicknav.css">
   <link rel="stylesheet" href="assets/dist/css/animate.min.css">
-  <link rel="stylesheet" href=assets/dist/css/magnific-popup.css">
+  <link rel="stylesheet" href="assets/dist/css/magnific-popup.css">
   <link rel="stylesheet" href="assets/dist/css/fontawesome-all.min.css">
   <link rel="stylesheet" href="assets/dist/css/themify-icons.css">
   <link rel="stylesheet" href="assets/dist/css/slick.css">
